Updated .csproj files to latest VS2013 settings
Includes moving WinPhone to SDK 8.1, and updating iOS/Android project
files to latest Xamarin settings.

--- a/MonoCross.Droid/MonoCross.Droid.csproj
+++ b/MonoCross.Droid/MonoCross.Droid.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>MonoCross.Droid</RootNamespace>
     <AssemblyName>MonoCross.Droid</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v4.0.3</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,10 +34,9 @@
     <DocumentationFile>bin\Release\MonoCross.Droid.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Android" />
-    <Reference Include="Mono.Android.Support.v4" />
     <Reference Include="mscorlib" />
     <Reference Include="System.Core" />
+    <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MXActivityView.cs" />
