--- a/MonoCross.CF.csproj
+++ b/MonoCross.CF.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4275E2E0-8941-4CCC-BBE7-413868F1A581}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MonoCross.Navigation</RootNamespace>
-    <AssemblyName>MonoCross.Navigation.CF</AssemblyName>
+    <RootNamespace>MonoCross</RootNamespace>
+    <AssemblyName>MonoCross.CF</AssemblyName>
     <ProjectTypeGuids>{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PlatformFamilyName>PocketPC</PlatformFamilyName>
     <PlatformID>4118C335-430C-497f-BE48-11C3316B135E</PlatformID>
@@ -31,7 +31,7 @@
     <FileAlignment>512</FileAlignment>
     <WarningLevel>4</WarningLevel>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <DocumentationFile>bin\Debug\MonoCross.Navigation.CF.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\MonoCross.CF.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -45,14 +45,14 @@
     <FileAlignment>512</FileAlignment>
     <WarningLevel>4</WarningLevel>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <DocumentationFile>bin\Release\MonoCross.Navigation.CF.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\MonoCross.CF.xml</DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json.CF, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Distribution\Newtonsoft.Json.CF.dll</HintPath>
+      <HintPath>Distribution\Newtonsoft.Json.CF.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -103,17 +103,6 @@
     <Compile Include="Utilities\PlatformUtils.cs" />
     <Compile Include="Utilities\Extensions\EnumExtensions.cs" />
     <Compile Include="Utilities\Extensions\WaitHandleExtensions.cs" />
-    <Compile Include="Utilities\Barcode\BarcodeScanner.cs" />
-    <Compile Include="Utilities\Barcode\BarcodeScannerFactory.cs" />
-    <Compile Include="Utilities\Barcode\IBarcodeScanner.cs" />
-    <Compile Include="Utilities\Barcode\LineaPro.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Utilities\Barcode\RedLaser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Utilities\Barcode\RedLaser.MD.cs" />
-    <Compile Include="Utilities\Barcode\Symbology.cs" />
     <Compile Include="Utilities\Encryption\EncryptionMode.cs" />
     <Compile Include="Utilities\Encryption\IEncryption.cs" />
     <Compile Include="Utilities\Encryption\MockEncryption.cs" />
