Added HttpUtility class to MonoCross csproj. * Copy of Mono implementation. Original author recognition retained in the header. * Namespace changed to MonoCross.Utilities to prevent namespace collision.

--- a/MonoCross.csproj
+++ b/MonoCross.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Utilities\Extensions\EnumExtensions.cs" />
     <Compile Include="Utilities\Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Utilities\Extensions\StringExtensions.cs" />
+    <Compile Include="Utilities\HttpUtility.cs" />
     <Compile Include="Utilities\ImageComposition\ICompositor.cs" />
     <Compile Include="Utilities\ImageComposition\ImageUtility.cs" />
     <Compile Include="Utilities\ImageComposition\NullCompositor.cs" />
