--- a/Utilities/MonoCross.Utilities.Touch.csproj
+++ b/Utilities/MonoCross.Utilities.Touch.csproj
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <DefineConstants>TOUCH;PARTIAL_SIGN</DefineConstants>
+    <DefineConstants>TOUCH</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoCross">
