--- a/Utilities/MonoCross.Utilities.Droid.Debug.csproj
+++ b/Utilities/MonoCross.Utilities.Droid.Debug.csproj
@@ -30,7 +30,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;DROID;PARTIAL_SIGN</DefineConstants>
+    <DefineConstants>TRACE;DROID</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
